# Fund-Finder

./: .gitignore  app.py  directory_structure.md  logic.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  business_logic.py  views.py
app/api/: business_logic.py  routes.py
app/auth/: __init__.py  routes.py
app/config/: __init__.py  settings.py
app/services/: mocky_api.py
app/templates/: base.html  basic-info.html  funding-requirements.html  home.html
config/: config.py
docs/internal_docs/: directory_structure.md  documentation.md  project_overview.md
docs/psuedo_code/auth/: auth_forms.md  auth_routes.md
templates/: base.html  basic-info.html  funding-require.html  funding-requirements.html  home.html  project-details.html  review-submission.html
