[project]
name = "fund_finder"
version = "0.1.0"
description = "A Flask-based app for finding municipal funding programs"
requires-python = ">=3.10"
authors = [
    {name = "Author", email = "author@example.com"}
]
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiohttp-retry==2.8.3",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "attrs==24.2.0",
    "blinker==1.8.2",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "click==8.1.7",
    "Flask==3.0.3",
    "Flask-DebugToolbar==0.16.0",
    "Flask-WTF==1.2.1",
    "frozenlist==1.4.1",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "multidict==6.1.0",
    "numpy==2.1.2",
    "pandas==2.2.3",
    "propcache==0.2.0",
    "PyJWT==2.9.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "responses==0.25.3",
    "six==1.16.0",
    "twilio==9.3.4",
    "typing_extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "Werkzeug==3.0.4",
    "WTForms==3.1.2",
    "yarl==1.15.5",
    "flask-mail",
    "flask-login",
    "flask-migrate",
    "flask-bcrypt",
    "flask-caching",
    "gunicorn",
    "flask-cors",
    "sentry-sdk"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-flask",
    "flask-testing",
    "coverage",
    "flask-debugtoolbar"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "config"]

[tool.uv]
lock-file = "uv.lock"
